data/derived/sp14/progs/unify/prog1078.ml.out
Characters 12-14:
  let _ = sin(pi*0.3);;
              ^^
Error: This expression has type float but an expression was expected of type
         int
